一些消融实验和画图

--- a/data_analyze/watch_data.ipynb
+++ b/data_analyze/watch_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,15 +71,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140535610243056 140535610243056\n",
-      "140534981830368 140534979700288\n"
+      "140327038490160 140327038490160\n",
+      "140326922389536 140326922391792\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3115,13 +3115,7 @@
       "No. 3001 has 171473 docs\n",
       "No. 3002 has 171538 docs\n",
       "No. 3003 has 171589 docs\n",
-      "No. 3004 has 171603 docs\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "No. 3004 has 171603 docs\n",
       "No. 3005 has 171648 docs\n",
       "No. 3006 has 171667 docs\n",
       "No. 3007 has 171856 docs\n",
@@ -3529,7 +3523,13 @@
       "No. 3409 has 185081 docs\n",
       "No. 3410 has 185126 docs\n",
       "No. 3411 has 185149 docs\n",
-      "No. 3412 has 185239 docs\n",
+      "No. 3412 has 185239 docs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "No. 3413 has 185340 docs\n",
       "No. 3414 has 185369 docs\n",
       "No. 3415 has 185401 docs\n",
@@ -6554,13 +6554,7 @@
       "No. 6434 has 269282 docs\n",
       "No. 6435 has 269289 docs\n",
       "No. 6436 has 269320 docs\n",
-      "No. 6437 has 269353 docs\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "No. 6437 has 269353 docs\n",
       "No. 6438 has 269378 docs\n",
       "No. 6439 has 269392 docs\n",
       "No. 6440 has 269407 docs\n",
@@ -6936,7 +6930,13 @@
       "No. 6810 has 278711 docs\n",
       "No. 6811 has 278714 docs\n",
       "No. 6812 has 278737 docs\n",
-      "No. 6813 has 278743 docs\n",
+      "No. 6813 has 278743 docs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "No. 6814 has 278833 docs\n",
       "No. 6815 has 278901 docs\n",
       "No. 6816 has 278917 docs\n",
@@ -10532,13 +10532,7 @@
       "No. 10406 has 351692 docs\n",
       "No. 10407 has 351701 docs\n",
       "No. 10408 has 351703 docs\n",
-      "No. 10409 has 351710 docs\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "No. 10409 has 351710 docs\n",
       "No. 10410 has 351717 docs\n",
       "No. 10411 has 351730 docs\n",
       "No. 10412 has 351743 docs\n",
@@ -11076,7 +11070,13 @@
       "No. 10944 has 361451 docs\n",
       "No. 10945 has 361466 docs\n",
       "No. 10946 has 361473 docs\n",
-      "No. 10947 has 361478 docs\n",
+      "No. 10947 has 361478 docs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "No. 10948 has 361489 docs\n",
       "No. 10949 has 361497 docs\n",
       "No. 10950 has 361499 docs\n",
@@ -14581,13 +14581,7 @@
       "No. 14449 has 419823 docs\n",
       "No. 14450 has 419839 docs\n",
       "No. 14451 has 419841 docs\n",
-      "No. 14452 has 419843 docs\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "No. 14452 has 419843 docs\n",
       "No. 14453 has 419862 docs\n",
       "No. 14454 has 419862 docs\n",
       "No. 14455 has 419870 docs\n",
@@ -15423,7 +15417,13 @@
       "No. 15285 has 433282 docs\n",
       "No. 15286 has 433309 docs\n",
       "No. 15287 has 433325 docs\n",
-      "No. 15288 has 433333 docs\n",
+      "No. 15288 has 433333 docs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "No. 15289 has 433365 docs\n",
       "No. 15290 has 433369 docs\n",
       "No. 15291 has 433388 docs\n",
@@ -18737,13 +18737,7 @@
       "No. 18599 has 480937 docs\n",
       "No. 18600 has 480943 docs\n",
       "No. 18601 has 480949 docs\n",
-      "No. 18602 has 480952 docs\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "No. 18602 has 480952 docs\n",
       "No. 18603 has 481001 docs\n",
       "No. 18604 has 481013 docs\n",
       "No. 18605 has 481029 docs\n",
@@ -19964,7 +19958,13 @@
       "No. 19820 has 497257 docs\n",
       "No. 19821 has 497289 docs\n",
       "No. 19822 has 497312 docs\n",
-      "No. 19823 has 497324 docs\n",
+      "No. 19823 has 497324 docs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "No. 19824 has 497402 docs\n",
       "No. 19825 has 497407 docs\n",
       "No. 19826 has 497427 docs\n",
@@ -20973,6 +20973,187 @@
     "        else:\n",
     "            count += 1\n",
     "print(\"No. {} has {} docs\".format(empty_line, count))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Case Study\n",
+    "选取的规则为：\n",
+    "1. 在TRGKG中前五个全部预测正确\n",
+    "2. GATER前五个预测正确TRGKG中靠后或者预测错误\n",
+    "3. TAKG预测错误\n",
+    "打印规则例子为\n",
+    "原帖子：\n",
+    "目标关键词：\n",
+    "TAKG ：\n",
+    "GATER：\n",
+    "TRGKG：\n",
+    "空行"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem.porter import *\n",
+    "import copy\n",
+    "stemmer = PorterStemmer()\n",
+    "def stem_word_list(word_list):\n",
+    "    return [stemmer.stem(w.strip().lower()) for w in word_list]\n",
+    "\n",
+    "def stem_str_list(str_list):\n",
+    "    stemmed_str_list = []\n",
+    "    for words_str in str_list:\n",
+    "        stemmed_word_list = stem_word_list(words_str.split(' '))\n",
+    "        stemmed_str_list.append(' '.join(stemmed_word_list))\n",
+    "    return stemmed_str_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 读取数据\n",
+    "Pre_PATH = './caseStudy/twitter/'\n",
+    "golden_keyphrases = [line.strip().split(';') for line in open(Pre_PATH + 'test_trg.txt', 'r')]\n",
+    "source_posts = [line.strip() for line in open(Pre_PATH + 'test_src.txt', 'r')]\n",
+    "takg_predctions = [line.strip().split(';')[:5] for line in open(Pre_PATH + 'predictions_takg.txt', 'r')]\n",
+    "gater_predctions = [line.strip().split(';')[:5] for line in open(Pre_PATH + 'predictions_gater.txt', 'r')]\n",
+    "trgkg_predctions = [line.strip().split(';')[:5] for line in open(Pre_PATH + 'predictions_trgkg.txt', 'r')]\n",
+    "nums = len(golden_keyphrases) \n",
+    "assert len(source_posts) == nums\n",
+    "assert len(trkg_predctions) == nums\n",
+    "assert len(gater_predctions) == nums\n",
+    "assert len(trgkg_predctions) == nums\n",
+    "# 转化成词根\n",
+    "golden_keyphrases_stream = [stem_str_list(keyphrases) for keyphrases in golden_keyphrases]\n",
+    "takg_keyphrases_stream =  [stem_str_list(keyphrases) for keyphrases in takg_predctions]\n",
+    "gater_keyphrases_stream = [stem_str_list(keyphrases) for keyphrases in gater_predctions]\n",
+    "trgkg_keyphrases_stream = [stem_str_list(keyphrases) for keyphrases in trgkg_predctions]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: 79\n",
+      "Source Posts: i am hungry but i can not leave my computer . this is troubling .\n",
+      "Golden Keyphrases: ['jan 25', 'egypt']\n",
+      "TAKG: ['that is all', 'just saying', 'random', 'random thought', 'teen things']\n",
+      "GATER: ['fat tweet', 'super bowl', 'quote', 'just saying', 'fail']\n",
+      "TRGKG: ['egypt', 'truth', 'subtweet', 'jan 25', 'real talk']\n",
+      "\n",
+      "ID: 473\n",
+      "Source Posts: i am thinking caleb hainie could ' ve fixed barkley ' s swing .\n",
+      "Golden Keyphrases: ['bears', 'packers']\n",
+      "TAKG: ['sotu', 'super bowl', 'sb 45', 'go pack go', 'state of the union']\n",
+      "GATER: ['bears', 'cricket', 'glee', 'super bowl', 'jan 25']\n",
+      "TRGKG: ['bears', 'cricket', 'glee', 'super bowl', 'packers']\n",
+      "\n",
+      "ID: 1138\n",
+      "Source Posts: nobody said it was going to be easy . long way to go . but tunisia will make it . <number> years cannot be just flipped into perfection\n",
+      "Golden Keyphrases: ['tunisia', 'sidibouzid']\n",
+      "TAKG: ['tunisia', 'now playing', 'tcot', 'chelsea', 'auspol']\n",
+      "GATER: ['tunisia', 'jan 25', 'egypt', 'fail', 'tahrir']\n",
+      "TRGKG: ['tunisia', 'jan 25', 'egypt', 'sidibouzid', 'fail']\n",
+      "\n",
+      "ID: 1533\n",
+      "Source Posts: to be quite frank i do not even care who wins sb45 - i just want this game to be fun to watch\n",
+      "Golden Keyphrases: ['sb45', 'just saying']\n",
+      "TAKG: ['sb45', 'bbc super bowl', 'super bowl', 'sb 45', 'packers']\n",
+      "GATER: ['sb45', 'super bowl', 'sb 45', 'go pack go', 'packers']\n",
+      "TRGKG: ['sb45', 'super bowl', 'packers', 'just saying', 'steelers']\n",
+      "\n",
+      "ID: 2128\n",
+      "Source Posts: love is a game that two can play and both win .\n",
+      "Golden Keyphrases: ['quote', 'love']\n",
+      "TAKG: ['love', 'super bowl', 'sb45', 'packers', 'steelers']\n",
+      "GATER: ['oh teen quotes', 'just saying', 'quote', 'daily teen', 'omgsotrue']\n",
+      "TRGKG: ['love', 'real talk', 'quote', 'fact', 'omgsotrue']\n",
+      "\n",
+      "ID: 2376\n",
+      "Source Posts: be wise in the way you act toward others . let your conversations always be full of grace .\n",
+      "Golden Keyphrases: ['quote', 'wisdom']\n",
+      "TAKG: ['quote', 'the female truth', 'the sw', 'quote alicious', 'i think that way']\n",
+      "GATER: ['islam', 'oh teen quotes', 'just saying', 'as sch', 'feeling soo']\n",
+      "TRGKG: ['islam', 'quote', 'wisdom', 'fact', 'quotes']\n",
+      "\n",
+      "ID: 2714\n",
+      "Source Posts: cbs just referred to doqqi as ' doughy . ' lack of research kills me .\n",
+      "Golden Keyphrases: ['egypt', 'jan 25']\n",
+      "TAKG: ['am writing', 'tc yasi', 'blessed', 'snowpocalypse', 'sotu']\n",
+      "GATER: ['fail', 'qanda', 'super bowl', 'just saying', 'random']\n",
+      "TRGKG: ['jan 25', 'egypt', 'tcot', 'qanda', 'sotu']\n",
+      "\n",
+      "ID: 2822\n",
+      "Source Posts: \" now means now . \" thank you , obama administration . now put your money where your mouth is !\n",
+      "Golden Keyphrases: ['obama', 'egypt', 'jan 25']\n",
+      "TAKG: ['sotu', 'tcot', 'obama', 'tn fisherman', 'state of the union']\n",
+      "GATER: ['sotu', 'tcot', 'obama', 'jan 25', 'super bowl']\n",
+      "TRGKG: ['sotu', 'tcot', 'jan 25', 'egypt', 'obama']\n",
+      "\n",
+      "ID: 3208\n",
+      "Source Posts: he might talk hella shit to me but that ' s just how we are ! so hop off bitch dont try to bring me into your misary ! stfu stupid\n",
+      "Golden Keyphrases: ['bitch', 'stfu']\n",
+      "TAKG: ['stfu', 'dead', 'rhoa', 'are the worst', 'american idol']\n",
+      "GATER: ['stfu', 'dead', 'quote', 'just saying', 'fail']\n",
+      "TRGKG: ['stfu', 'bitch', 'dont try to bring', 'dead', 'dont judge me']\n",
+      "\n",
+      "ID: 3813\n",
+      "Source Posts: white house : when we said there should be transition in egypt we meant yesterday and not september\n",
+      "Golden Keyphrases: ['egypt', 'mubarak', 'obama']\n",
+      "TAKG: ['egypt', 'jan 25', 'mubarak', 'tahrir', 'cairo']\n",
+      "GATER: ['egypt', 'jan 25', 'obama', 'tahrir', 'egyptian']\n",
+      "TRGKG: ['egypt', 'jan 25', 'obama', 'mubarak', 'tahrir']\n",
+      "\n",
+      "ID: 4370\n",
+      "Source Posts: you do not have to go looking for love when it ' s where you come from .\n",
+      "Golden Keyphrases: ['quotes', 'quote', 'love']\n",
+      "TAKG: ['just saying', 'fact', 'oh teen quotes', 'love', 'so singaporean']\n",
+      "GATER: ['as sch', 'oh teen quotes', 'love', 'real talk', 'daily teen']\n",
+      "TRGKG: ['as sch', 'love', 'quotes', 'real talk', 'feeling soo']\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#过滤数据 选取满足条件的数据\n",
+    "for index, line in enumerate(golden_keyphrases_stream):\n",
+    "    if len(line) < 2:\n",
+    "        continue;\n",
+    "    count = 0\n",
+    "    for key in line:\n",
+    "        if key in trgkg_keyphrases_stream[index]:\n",
+    "            count += 1\n",
+    "    if count != len(line): \n",
+    "        continue;\n",
+    "    count_gate = 0\n",
+    "    count_takg = 0\n",
+    "    for key in line:\n",
+    "        if key in gater_keyphrases_stream[index]:\n",
+    "            count_gate += 1\n",
+    "    for key in line:\n",
+    "        if key in takg_keyphrases_stream[index]:\n",
+    "            count_takg += 1\n",
+    "    if count > count_gate and count > count_takg:\n",
+    "        print(\"ID:\", index)\n",
+    "        print(\"Source Posts:\", source_posts[index])\n",
+    "        print(\"Golden Keyphrases:\", golden_keyphrases[index])\n",
+    "        print(\"TAKG:\", takg_predctions[index])\n",
+    "        print(\"GATER:\", gater_predctions[index])\n",
+    "        print(\"TRGKG:\", trgkg_predctions[index])\n",
+    "        print()"
    ]
   },
   {
